force-app/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__DisableRevertAction__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DisableRevertAction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that you cannot revert the feature step after it has been completed.</description>
    <inlineHelpText>Indicates that you cannot revert the feature step after it has been completed.</inlineHelpText>
    <label>Disable Revert Action</label>
    <type>Checkbox</type>
</CustomField>