force-app/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__StepDescription__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StepDescription__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>